fix: fix poster content size on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
 }
 
 .movies {
-    gap: 30px;
+    gap: 50px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
@@ -198,6 +198,7 @@ body {
 
     .poster .content {
         font-size: .8rem;
+        height: 25%;
     }
 }
 
